fix z-index issues with payment modal dropdowns

--- a/webapp/channels/src/components/purchase_modal/purchase.scss
+++ b/webapp/channels/src/components/purchase_modal/purchase.scss
@@ -2,7 +2,7 @@
     overflow: hidden;
     height: 100%;
 
-    &__purchase-body {
+    & &__purchase-body {
         overflow-y: auto;
     }
 
